fix(container): move background on mobile

--- a/src/components/layout/container.css
+++ b/src/components/layout/container.css
@@ -5,6 +5,7 @@
   color: white;
   background-size: 100% auto;
   background-repeat: no-repeat;
+  background-position: center;
   padding-bottom: 114px;
   position: relative;
   overflow-x: clip;
@@ -13,16 +14,17 @@
   padding-bottom: 0px;
 }
 .container__arrow::after {
-  height: 140px;
-  width: 140px;
-  background: #131214;
-  content: "";
+  height: 68px;
+  width: 148px;
+  background: var(--background);
+  mask-image: url("data:image/svg+xml,%3Csvg width='148' height='68' viewBox='0 0 148 68' fill='none' xmlns='http://www.w3.org/2000/svg'%3E%3Cpath d='M0 0.867212C0 0.867212 10.432 0.867188 24.6865 0.867188C44.4684 0.867188 54.8958 0.867188 73.6865 0.867188C92.4773 0.867188 96.9046 0.867188 116.687 0.867188C130.941 0.867188 147.373 0.867188 147.373 0.867188L85 63.2398C78.7516 69.4881 68.6209 69.4882 62.3726 63.2398L0 0.867212Z' fill='currentColor'/%3E%3C/svg%3E%0A");
+  content: '';
   display: block;
   position: absolute;
   left: 50%;
-  transform: translateX(-50%) rotate(45deg);
-  bottom: -55px;
-  border-radius: 16px;
+  transform: translateX(-50%);
+  top: calc(100% - 1px);
+  z-index: 1;
 }
 .container__icons::before {
   width: 100%;
@@ -88,6 +90,8 @@
 }
 @media (max-width: 809px) {
   .container {
+
+  background-position: top;
     padding-bottom: 3rem;
     padding-top: 3rem;
   }
